--- a/app/src/main/res/layout/dialog_sensor_info.xml
+++ b/app/src/main/res/layout/dialog_sensor_info.xml
@@ -134,6 +134,7 @@
                 android:layout_height="wrap_content"
                 android:text="https://example.com"
                 android:textSize="16sp"
+                android:autoLink="web"
                 android:layout_marginTop="5dp"
                 android:textColor="@color/black"
                 android:textStyle="bold" />
