--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -69,5 +69,17 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <ImageView
+        android:id="@+id/imageView5"
+        android:layout_width="127dp"
+        android:layout_height="185dp"
+        app:layout_constraintBottom_toTopOf="@+id/navBar"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.53"
+        app:layout_constraintStart_toStartOf="@+id/multiGauge"
+        app:layout_constraintTop_toBottomOf="@+id/relative_toolbar"
+        app:layout_constraintVertical_bias="0.466"
+        app:srcCompat="@drawable/logo_no_text" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
 
